[ci] add swagger docs to GitHub Pages
