# api/swagger.yaml
@@ -22,18 +22,22 @@ definitions:
     properties:
       createdAt:
         description: Created at
+        format: date-time
         type: string
       id:
         description: ID
         type: string
       targetUrl:
         description: Target link
+        format: uri
         type: string
       url:
         description: Short link
+        format: uri
         type: string
       validUntil:
         description: Valid until
+        format: date-time
         type: string
     type: object
   api.PostLinksRequest:
@@ -105,6 +109,10 @@ paths:
             $ref: '#/definitions/api.PostLinksResponse'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/http.JSONErrorResponse'
+        "429":
+          description: Too many requests
           schema:
             $ref: '#/definitions/http.JSONErrorResponse'
         "500":
